fixing description styling whitespace

--- a/frontend/main/src/App.css
+++ b/frontend/main/src/App.css
@@ -1076,7 +1076,6 @@ input:checked + .slider:before {
   font-size:26px;
   padding:16px;
   word-wrap: break-word;
-  white-space: pre-wrap;
   font-weight: 400;
 }
 
